--- a/FP/requirements.txt
+++ b/FP/requirements.txt
@@ -1,103 +1,112 @@
-beautifulsoup4~=4.12.2
+beautifulsoup4~=4.12.3
 soupsieve~=2.5
-opencv-python~=4.8.1.78
-numpy~=1.26.2
-defusedxml~=0.7.1
+opencv-python~=4.9.0.80
+numpy~=1.26.4
+h11~=0.14.0
 cffi~=1.16.0
-Pillow~=10.1.0
-ipython~=8.19.0
+defusedxml~=0.8.0rc2
+typing_extensions~=4.10.0
+pillow~=10.2.0
+ipython~=8.22.2
 jupyter~=1.0.0
-pip~=23.3.2
-attrs~=23.1.0
+pip~=24.0
+attrs~=23.2.0
+wheel~=0.42.0
 tornado~=6.4
-Jinja2~=3.1.2
+Jinja2~=3.1.3
 filelock~=3.13.1
-pyzmq~=25.1.2
+pyzmq~=26.0.0b2
 colorama~=0.4.6
-typing_extensions~=4.9.0
-setuptools~=65.5.0
-comm~=0.2.0
-traitlets~=5.14.0
+setuptools~=69.1.1
+comm~=0.2.1
+traitlets~=5.14.1
 fqdn~=1.5.1
 parso~=0.8.3
 jedi~=0.19.1
-pytz~=2023.3.post1
+pytz~=2024.1
 QtPy~=2.4.1
-packaging~=23.2
+packaging~=24.0
 PyQt5~=5.15.10
+torch~=2.2.1
+thop~=0.1.1-2209072238
 requests~=2.31.0
-ipywidgets~=8.1.1
-notebook~=7.0.6
+ipywidgets~=8.1.2
+notebook~=7.1.1
 PyYAML~=6.0.1
-sniffio~=1.3.0
+sniffio~=1.3.1
 arrow~=1.3.0
-python-dateutil~=2.8.2
+python-dateutil~=2.9.0.post0
 Babel~=2.14.0
+Pygments~=2.17.2
+certifi~=2024.2.2
+idna~=3.6
+rfc3986~=2.0.0
+httpcore~=1.0.4
 pywin32~=306
-overrides~=7.4.0
-scipy~=1.11.4
-matplotlib~=3.8.2
+overrides~=7.7.0
+scipy~=1.12.0
+threadpoolctl~=3.3.0
+matplotlib~=3.8.3
 mpmath~=1.3.0
 sympy~=1.12
-platformdirs~=4.1.0
+platformdirs~=4.2.0
 decorator~=5.1.1
-torch~=2.1.2
-tqdm~=4.66.1
-torchvision~=0.16.2
-psutil~=5.9.7
-urllib3~=2.1.0
-fsspec~=2023.12.2
+tqdm~=4.66.2
+torchvision~=0.17.1
+psutil~=5.9.8
+urllib3~=2.2.1
+fsspec~=2024.2.0
 six~=1.16.0
 webencodings~=0.5.1
 bleach~=6.1.0
 tinycss2~=1.2.1
-MarkupSafe~=2.1.3
+MarkupSafe~=2.1.5
 joblib~=1.3.2
-pandas~=2.1.4
-certifi~=2023.11.17
-debugpy~=1.8.0
-imageio~=2.33.1
-tifffile~=2023.12.9
-Pygments~=2.17.2
+pandas~=2.2.1
+py-cpuinfo~=9.0.0
+debugpy~=1.8.1
+imageio~=2.34.0
+tifffile~=2024.2.12
 jupyter_client~=8.6.0
-wcwidth~=0.2.12
+wcwidth~=0.2.13
+seaborn~=0.13.2
+cycler~=0.12.1
 scikit-image~=0.22.0
 lazy_loader~=0.3
 networkx~=3.2.1
-scikit-learn~=1.3.2
-threadpoolctl~=3.2.0
+scikit-learn~=1.4.1.post1
+anyio~=4.3.0
 nbformat~=5.9.2
+jupyter_core~=5.7.1
 nbclient~=0.9.0
-nbconvert~=7.13.1
-jupyter_core~=5.5.1
-fastjsonschema~=2.19.0
-jsonschema~=4.20.0
-jupyter_server~=2.12.1
-jupyterlab~=4.0.9
-jupyterlab_server~=2.25.2
-notebook_shim~=0.2.3
-idna~=3.6
+fastjsonschema~=2.19.1
+jsonschema~=4.21.1
+jupyter_server~=2.13.0
+jupyterlab~=4.2.0a0
+jupyterlab_server~=2.25.3
+notebook_shim~=0.2.4
 asttokens~=2.4.1
 contourpy~=1.2.0
 executing~=2.0.1
-fonttools~=4.47.0
-ipykernel~=6.27.1
-pandocfilters~=1.5.0
+fonttools~=4.49.0
+ipykernel~=6.29.3
+nbconvert~=7.16.2
+pandocfilters~=1.5.1
 mistune~=3.0.2
 jupyterlab_pygments~=0.3.0
 pycparser~=2.21
-pyparsing~=3.1.1
+pyparsing~=3.1.2
 qtconsole~=5.5.1
-terminado~=0.18.0
 websocket-client~=1.7.0
-referencing~=0.32.0
+terminado~=0.18.0
+referencing~=0.33.0
 webcolors~=1.13
 jsonpointer~=2.4
 isoduration~=20.11.0
-cycler~=0.12.1
+httpx~=1.0.0b0
 kiwisolver~=1.4.5
 Send2Trash~=1.8.2
-jupyter_server_terminals~=0.5.0
-anyio~=4.2.0
-json5~=0.9.14
-ultralytics~=8.0.229
+ultralytics~=8.1.25
+prometheus_client~=0.20.0
+jupyter_server_terminals~=0.5.2
+json5~=0.9.22
